# speedrun.py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  speedrun.py
examples/: auth.py  basic.py
speedrunpy/: __init__.py  asset.py  category.py  client.py  embeds.py  errors.py  game.py  http.py  leaderboard.py  level.py  mixin.py  name.py  objects.py  page.py  run.py  speedrun.py  user.py  utils.py  variable.py
src/speedrunpy/: __init__.py  asset.py  category.py  client.py  const.py  errors.py  game.py  guest.py  http.py  leaderboard.py  level.py  mixin.py  name.py  page.py  run.py  user.py  utils.py  variable.py
src/speedrunpy/models/: asset.py  category.py  game.py  leaderboard.py  level.py  mixin.py  name.py  page.py  run.py  types.py  user.py
