[project]
name = "speedrun.py"
version = "23.7a0"
description = "An asynchronous API wrapper for speedun.com v1"
authors = [
    { name="null2264", email="palembani@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.6.2",
    "typing-extensions>=4.7.1"
]

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
includes = ["src/speedrunpy"]
source-includes = ["tests", "CHANGELOG.md", "LICENSE", "README.md"]
# editables backend doesn't work well with namespace packages
editable-backend = "path"

[tool.pdm.dev-dependencies]
lint = [
    "black>=21.7b0",
    "isort>=5.9.3"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
